# web-component

./: Cargo.toml  README.md
crates/cargo-web-component/: Cargo.toml
crates/cargo-web-component/src/: main.rs
crates/cargo-web-component/src/templates/project/: Cargo.toml.template  Dioxus.toml
crates/cargo-web-component/src/templates/project/src/: main.rs
crates/cargo-web-component/src/templates/project/src/logo/: style.css
crates/cargo-web-component/src/templates/project/src/navigation_bar/: mod.rs  style.css
crates/cargo-web-component/src/templates/project/src/parameterized_route/: mod.rs
crates/web-component/: Cargo.toml
crates/web-component/src/: lib.rs
crates/web-component/src/closure/: mod.rs
crates/web-component/src/prelude/: mod.rs
crates/web-component/src/resource/: mod.rs
crates/web-component/src/runner/: mod.rs
crates/web-component/src/web_component/: mod.rs
crates/web-component/src/web_component/properties/: mod.rs
examples/components/: Cargo.toml  Dioxus.toml
examples/components/src/: main.rs
examples/components/src/logo/: mod.rs
web-component/: import.js  wasm.js  web-component.js
web-component/loader/: multi-loader.js  wasm.js
