[workspace]
resolver = "2"
members = [
    "crates/cargo-web-component",
    "crates/web-component",
    "examples/components"
]

[workspace.dependencies]
web-component = { path = "crates/web-component" }
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5"
wasm-bindgen-futures = "0.4.0"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element"] }
enum-as-inner = "0.6.1"
tokio = { version = "1", features = ["sync"]}
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = "1.0"
tracing = "0.1.37"

