[package]
name = "cargo-web-component"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["*", "../../README.md", "../../LICENSE"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
dioxus-cli = { version = "0.6", git = "https://github.com/notdanilo/dioxus.git", branch = "feature/dioxus-cli-as-lib" }
clap = "4.5.7"
