[package]
name = "cargo-web-component"
readme = "README.md"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }