[package]
name = "web-component"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[dependencies]
dioxus.workspace = true
dioxus-logger.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
enum-as-inner.workspace = true
tokio.workspace = true
