[package]
name = "web-component"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
include = ["*", "../../README.md", "../../LICENSE"]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[dependencies]
dioxus.workspace = true
dioxus-logger.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
enum-as-inner.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
