[package]
name = "components-examples"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-component.workspace = true
dioxus.workspace = true
